update website apperance

--- a/site/components/Link.astro
+++ b/site/components/Link.astro
@@ -13,11 +13,12 @@ const { title = "", src = "" } = Astro.props;
 
 <style>
     li {
-        height: 20px;
+        height: 30px;
         min-width: 100px;
-        background-color: rgba(20, 20, 25, 0.3);
+        background-color: rgba(10, 10, 15, 0.3);
         padding: 10px;
-        margin: 1px;
+        margin: 3px;
+        border-bottom: 1px solid rgba(220, 220, 255, 0.3);
         display: flex;
         align-items: center;
         transition: all 0.2s;
