feat: add Layer.resize() update website appearence

--- a/site/components/Link.astro
+++ b/site/components/Link.astro
@@ -40,8 +40,7 @@ const { title = "", src = "" } = Astro.props;
         align-items: center;
         color: aliceblue;
         text-decoration: none;
-        font-family: Helvetica;
+        font-family: var(--font-family);
         font-size: 80%;
-        font-weight: bolder;
     }
 </style>
