--- a/site/components/TopBar.astro
+++ b/site/components/TopBar.astro
@@ -23,7 +23,8 @@ const examples = [
 <style>
     div {
         width: calc(100% - 2px);
-        height: 10%;
+        height: 7%;
+        min-height: 35px;
         position: fixed;
         background-color: rgba(15, 15, 25, 0.5);
         border: 1px solid rgba(220, 220, 255, 0.3);
@@ -35,7 +36,7 @@ const examples = [
 
     div h1 {
         color: aliceblue;
-        font-family: Helvetica;
+        font-family: var(--font-family);
         font-size: 120%;
     }
 </style>
