--- a/site/components/NavBar.astro
+++ b/site/components/NavBar.astro
@@ -38,8 +38,10 @@ const { list = [""], focus = "" } = Astro.props;
 
 <style>
     button {
-        width: 10vh;
-        height: 10vh;
+        width: 7vh;
+        height: 7vh;
+        min-width: 35px;
+        min-height: 35px;
         position: absolute;
         top: 0;
         left: 0;
@@ -49,6 +51,7 @@ const { list = [""], focus = "" } = Astro.props;
         background-position: center;
         background-repeat: no-repeat;
         border: none;
+        outline: none;
         transition: rotate 0.3s;
     }
 
@@ -61,7 +64,7 @@ const { list = [""], focus = "" } = Astro.props;
         padding-left: 10px;
         padding-top: 10px;
         padding-right: 10px;
-        top: calc(10vh + 1px);
+        top: calc(max(35px, 7vh) + 1px);
         left: -100%;
         list-style: none;
         transition: left ease-in-out 0.3s;
@@ -78,7 +81,7 @@ const { list = [""], focus = "" } = Astro.props;
         position: relative;
         left: 0;
         color: aliceblue;
-        font-family: Helvetica;
+        font-family: var(--font-family);
         font-weight: bold;
         font-size: large;
     }
@@ -86,7 +89,7 @@ const { list = [""], focus = "" } = Astro.props;
     ul p {
         color: aliceblue;
         padding: 0;
-        font-family: Helvetica;
+        font-family: var(--font-family);
         font-size: small;
     }
 </style>
