--- a/site/layouts/Example.astro
+++ b/site/layouts/Example.astro
@@ -1,5 +1,6 @@
 ---
 import TopBar from "../components/TopBar.astro";
+import "@fontsource/poppins";
 
 interface Props {
     title?: string;
@@ -25,5 +26,9 @@ const { title = "" } = Astro.props;
     body {
         padding: 0;
         margin: 0;
+    }
+
+    :root {
+        --font-family: "poppins";
     }
 </style>
