feat: add FunctionGraph2D add an example

--- a/site/pages/gallery/index.astro
+++ b/site/pages/gallery/index.astro
@@ -9,6 +9,7 @@ import Main from "../../layouts/Main.astro";
             "Rubik's Cube",
             "Electric Field",
             "Magnetic Focus",
+            "Axes",
         ];
         const example = examples[Math.floor(Math.random() * examples.length)];
 
