feat: update website appearence

--- a/site/pages/gallery/Magnetic Focus.astro
+++ b/site/pages/gallery/Magnetic Focus.astro
@@ -17,8 +17,8 @@ import Example from "../../layouts/Example.astro";
             constructor(strength, ...args) {
                 super(...args);
                 this.strength = strength;
-                this.strokeColor = mp.COLORS.RED_C;
-                this.fillColor = new mp.Color(0.81, 0.1, 0.1, 0.1);
+                this.strokeColor = mp.COLORS.GRAY_C;
+                this.fillColor = mp.COLORS.GRAY_D;
             }
 
             update() {
