feat: use glenum

--- a/site/pages/gallery/Axes.astro
+++ b/site/pages/gallery/Axes.astro
@@ -21,7 +21,7 @@ import Example from "../../layouts/Example.astro";
         figure1.set("strokeColor", mp.COLORS.RED);
         figure1.update();
         const figure2 = axes.drawFunction2D((x) => Math.sin(x));
-        figure2.set("strokeColor", mp.COLORS.GRAY);
+        figure2.set("strokeColor", mp.COLORS.SEIYA_PINK);
         figure2.update();
 
         // Render
