--- a/site/pages/gallery/Rubik's Cube.astro
+++ b/site/pages/gallery/Rubik's Cube.astro
@@ -13,22 +13,20 @@ import Example from "../../layouts/Example.astro";
         );
         mesh.material = new mp.LambertMaterial();
         mesh.material.colorMode = "texture";
+
+        const texture = mp.Texture.loadFile(
+            layer.renderer.gl,
+            "/Mraph.js/Rubik's Cube.png"
+        );
+        texture.magFilter = mp.GLENUM.NEAREST;
+        mesh.material.map = texture;
         layer.add(mesh);
 
         const pointLight = new mp.PointLight({
             position: new mp.Vector(1, 3, 7),
-            intensity: 0.5,
+            intensity: 30,
         });
         layer.add(pointLight);
-
-        const texture = new mp.Texture(gl);
-        const img = new Image();
-        img.src = "/Mraph.js/Rubik's Cube.png";
-        img.onload = () => {
-            texture.image = img;
-            texture.magFilter = mp.GLENUM.NEAREST;
-            texture.upload();
-        };
 
         layer.camera.position[2] = 3;
         layer.enableOrbitControl();
