--- a/site/pages/gallery/Axes.astro
+++ b/site/pages/gallery/Axes.astro
@@ -25,7 +25,7 @@ import Example from "../../layouts/Example.astro";
         figure2.update();
         const figure3D = axes.drawFunction3D((x, y) => x);
         figure3D.material.color = mp.COLORS.GREEN_E.clone();
-        figure3D.material.color[3] = 0.2;
+        figure3D.material.color.a = 0.2;
 
         // Render
         layer.add(axes);
