--- a/site/pages/gallery/Magnetic Focus.astro
+++ b/site/pages/gallery/Magnetic Focus.astro
@@ -44,9 +44,9 @@ import Example from "../../layouts/Example.astro";
                 this.charge = charge;
                 this.setColor(charge > 0 ? mp.COLORS.RED : mp.COLORS.BLUE);
 
-                const tail = new mp.Tail(this);
+                const tail = new mp.Tail(this, { maxSteps: 5, maxLength: 15 });
                 tail.strokeWidth = 0.02;
-                tail.setColor(mp.COLORS.GRAY);
+                tail.setColor(mp.COLORS.SEIYA_PINK);
                 this.add(tail);
             }
 
