--- a/site/pages/gallery/index.astro
+++ b/site/pages/gallery/index.astro
@@ -4,15 +4,6 @@ import Main from "../../layouts/Main.astro";
 
 <Main>
     <script>
-        const examples = [
-            "Basic Example",
-            "Rubik's Cube",
-            "Electric Field",
-            "Magnetic Focus",
-            "Axes",
-        ];
-        const example = examples[Math.floor(Math.random() * examples.length)];
-
-        window.location.replace(`/Mraph.js/gallery/${example}`);
+        window.location.replace(`/Mraph.js/gallery/Basic Example`);
     </script>
 </Main>
