update website appearance

--- a/site/components/Link.astro
+++ b/site/components/Link.astro
@@ -39,7 +39,7 @@ const { title = "", src = "", isFocusing = false } = Astro.props;
     }
 
     li:hover a {
-        color: rgb(77, 166, 255);
+        color: #fe63a1;
         transform: translateX(5px);
     }
 
