--- a/site/layouts/Main.astro
+++ b/site/layouts/Main.astro
@@ -1,4 +1,5 @@
 ---
+import TopBar from "../components/TopBar.astro";
 import "github-markdown-css";
 
 interface Props {
@@ -15,16 +16,25 @@ const { title = "" } = Astro.props;
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{title}</title>
     </head>
-    <body class="markdown-body">
-        <slot />
+    <body>
+        <TopBar title={title} />
+
+        <div class="markdown-body">
+            <slot />
+        </div>
     </body>
 </html>
 
 <style>
+    body {
+        margin: 0;
+    }
+
     .markdown-body {
         min-width: 200px;
-        max-width: 980px;
         padding: 45px;
+        padding-left: 150px;
+        padding-right: 150px;
     }
 
     @media (max-width: 767px) {
