--- a/site/pages/index.astro
+++ b/site/pages/index.astro
@@ -4,5 +4,12 @@ import Main from "../layouts/Main.astro";
 ---
 
 <Main title="Mraph.js">
-    <Content />
+    <div></div>
+    <Content class="body" />
 </Main>
+
+<style>
+    div {
+        height: 25px;
+    }
+</style>
