--- a/site/layouts/Example.astro
+++ b/site/layouts/Example.astro
@@ -10,7 +10,7 @@ const { title = "" } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="en">
+<html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
