--- a/site/components/NavBar.astro
+++ b/site/components/NavBar.astro
@@ -72,7 +72,7 @@ const { list = [""], focus = "" } = Astro.props;
         padding-top: 10px;
         padding-right: 10px;
         border-right: 1px solid rgba(220, 220, 255, 0.3);
-        top: calc(max(35px, 7vh) + 1px);
+        top: calc(100% + 1px);
         left: -100%;
         list-style: none;
         transition: left ease-in-out 0.3s;
