--- a/site/components/TopBar.astro
+++ b/site/components/TopBar.astro
@@ -25,7 +25,7 @@ const examples = [
 <style>
     div {
         width: calc(100% - 2px);
-        height: 7%;
+        height: 7vh;
         min-height: 35px;
         position: fixed;
         background-color: rgba(15, 15, 25, 0.5);
