--- a/site/components/TopBar.astro
+++ b/site/components/TopBar.astro
@@ -12,8 +12,8 @@ const examples = [
     "Rubik's Cube",
     "Electric Field",
     "Magnetic Focus",
-    "Axes",
     "Orbit Animation",
+    "Axes2D",
 ];
 ---
 
