--- a/site/pages/gallery/Axes2D.astro
+++ b/site/pages/gallery/Axes2D.astro
@@ -2,20 +2,21 @@
 import Example from "../../layouts/Example.astro";
 ---
 
-<Example title="Axes">
+<Example title="Axes2D">
     <script>
         import * as mp from "../../../src/mraph.js";
 
         const layer = new mp.Layer().appendTo(document.body);
 
         // Create an instance of Axes
-        const axes = new mp.Axes({
-            xRange: [-10, 10, 1], // You can set the length of every axis like this
+        const axes = new mp.Axes2D({
+            yRange: [-8, 8, 1], // You can set the length of every axis like this
+            drawGrid: true,
         });
 
         // Draw function figures
         const figure0 = axes.drawFunction2D((x) => x);
-        figure0.set("strokeColor", mp.COLORS.BLUE);
+        figure0.set("strokeColor", mp.COLORS.GREEN);
         figure0.update();
         const figure1 = axes.drawFunction2D((x) => x ** 2);
         figure1.set("strokeColor", mp.COLORS.COOPER_ORANGE);
@@ -23,10 +24,6 @@ import Example from "../../layouts/Example.astro";
         const figure2 = axes.drawFunction2D((x) => Math.sin(x));
         figure2.set("strokeColor", mp.COLORS.SEIYA_PINK);
         figure2.update();
-        const figure3D = axes.drawFunction3D((x, y) => x);
-        figure3D.material.colorMode = "single";
-        figure3D.material.color = mp.COLORS.GREEN_E.clone();
-        figure3D.material.color.a = 0.2;
 
         // Render
         layer.add(axes);
