--- a/site/components/NavBar.astro
+++ b/site/components/NavBar.astro
@@ -112,6 +112,6 @@ const { list = [""], focus = "" } = Astro.props;
     }
 
     ul a.nav-link:hover {
-        color: #f34e35;
+        color: #ff574b;
     }
 </style>
