--- a/site/pages/gallery/Rubik's Cube.astro
+++ b/site/pages/gallery/Rubik's Cube.astro
@@ -8,18 +8,11 @@ import Example from "../../layouts/Example.astro";
         const layer = new mp.Layer().appendTo(document.body);
         const gl = layer.renderer.gl;
 
-        const mesh = await mp.OBJLoader.parseToGeometry(
-            "/Mraph.js/Rubik's Cube.obj"
-        );
+        const mesh = await mp.OBJLoader.parseToGeometry("/Mraph.js/Rubik's Cube.obj");
         mesh.material = new mp.LambertMaterial();
         mesh.material.colorMode = "texture";
-
-        const texture = mp.Texture.loadFile(
-            layer.renderer.gl,
-            "/Mraph.js/Rubik's Cube.png"
-        );
-        texture.magFilter = mp.GLENUM.NEAREST;
-        mesh.material.map = texture;
+        mesh.material.diffuseTexture = mp.Texture.loadFile("/Mraph.js/Rubik's Cube.png");
+        mesh.material.diffuseTexture.magFilter = mp.GLENUM.NEAREST;
         layer.add(mesh);
 
         const pointLight = new mp.PointLight({
