feat: now can holds the timeline until everything is ready.

--- a/site/pages/gallery/Axes2D.astro
+++ b/site/pages/gallery/Axes2D.astro
@@ -35,6 +35,6 @@ import Example from "../../layouts/Example.astro";
         // Render
         layer.add(axes);
         layer.enableOrbitControl();
-        layer.play();
+        layer.play({ until: () => logo.texture.isImageReady });
     </script>
 </Example>
