--- a/site/components/TopBar.astro
+++ b/site/components/TopBar.astro
@@ -7,15 +7,7 @@ interface Props {
 
 const { title = "" } = Astro.props;
 
-const examples = [
-    "Basic Example",
-    "Rubik's Cube",
-    "Electric Field",
-    "Magnetic Focus",
-    "Orbit Animation",
-    "Axes2D",
-    "Animation Set",
-];
+const examples = ["Basic Example", "Rubik's Cube", "Electric Field", "Magnetic Focus", "Orbit Animation", "Axes2D"];
 ---
 
 <div>
